@@ -5,8 +5,8 @@ EXTRA_PROGRAMS = octopus octopus-mpi octopus-1d octopus-1d-mpi octopus-pol octop
 octopus_SOURCES = global.F90 liboct.F90 io.F90 pulpo.F90 units.F90 math.F90 \
 	spline.F90 fft.F90 \
 	ps_xc.F90 ps_kb.F90 tm.F90 hgh.F90 ps.F90 specie.F90 \
-	atom.F90 mesh.F90 hartree.F90 states.F90 xc.F90 \
-	out.F90 systm.F90 lasers.F90 h.F90 \
+	atom.F90 mesh.F90 hartree.F90 out.F90 states.F90 xc.F90 \
+	systm.F90 lasers.F90 h.F90 \
 	eigen.F90 mix.F90 lcao.F90 scf.F90 unocc.F90 static_pol.F90 \
 	geom_opt.F90 pes.F90 td.F90 run.F90 main.F90
 
@@ -20,7 +20,7 @@ noinst_HEADERS = \
 	states_inc.F90 states_kpoints.F90\
 	pes_rc.F90 pes_mask.F90 \
 	td_init.F90 td_rti.F90 td_rti3.F90\
-	mix_inc.F90
+	mix_inc.F90 out_inc.F90
 
 octopus_LDADD = ../liboct/liboct.a @LIB_FFTW@ @LIB_LAPACK@ @LIB_BLAS@ @GSL_LIBS@
 
@@ -43,7 +43,7 @@ hs_from_mult_SOURCES      = global.F90 io.F90 liboct.F90 units.F90 spectrum.F90 
 hs_from_mult_LDADD        = ../liboct/liboct.a @GSL_LIBS@
 hs_from_acc_SOURCES       = global.F90 io.F90 liboct.F90 units.F90 spectrum.F90 hs_from_acc.F90
 hs_from_acc_LDADD         = ../liboct/liboct.a @GSL_LIBS@
-function_to_dx_SOURCES = global.F90 io.F90 liboct.F90 units.F90 spectrum.F90 specie.F90 atom.F90 \
+function_to_dx_SOURCES = global.F90 io.F90 liboct.F90 units.F90 out.F90 spectrum.F90 specie.F90 atom.F90 \
                          ps.F90 spline.F90 math.F90 fft.F90 mesh.F90 states.F90 systm.F90 \
                          tm.F90 hgh.F90 ps_kb.F90 ps_xc.F90 mix.F90 dx.F90 function_to_dx.F90
 function_to_dx_LDADD   = ../liboct/liboct.a @LIB_FFTW@ @LIB_LAPACK@ @LIB_BLAS@ @GSL_LIBS@
@@ -80,3 +80,4 @@ states.o: states_inc.F90
 pes.o: pes_rc.F90 pes_mask.F90
 td.o: td_init.F90 td_rti.F90 td_rti3.F90
 mix.o: mix_inc.F90
+out.o: out_inc.F90
